test/expected/declare_ai-c++11.out
declare x as auto int
                  ^
19: syntax error: "int": unexpected token ("int" is a keyword)
auto x;
